--- a/view/nav.html
+++ b/view/nav.html
@@ -1,9 +1,9 @@
 <nav>
   <ul>
     <li><a href="/">Главная</a></li>
-    <li><a href="#">Каталог</a></li>
-    <li><a href="#">О нас</a></li>
-    <li><a href="#">Корзина</a></li>
+    <li><a href="/index.php?path=catalog/index/6">Каталог</a></li>
+    <li><a href="/index.php?path=about/index">О нас</a></li>
+    <li><a href="/index.php?path=cart/index">Корзина</a></li>
 <!--    <li><a href="#"></a></li>-->
   </ul>
 </nav>
