--- a/view/user/login.html
+++ b/view/user/login.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-{{ content_data }}
+{{ content_data.message }}
 
 <p>
   <a href="/index.php?path=user/registration">Зарегистрироваться</a>
