--- a/view/user/login.html
+++ b/view/user/login.html
@@ -9,7 +9,7 @@
 {{ content_data.message }}
 
 <p>
-  <a href="/index.php?path=user/registration">Зарегистрироваться</a>
+  <a href="/index.php?path=user/signup">Зарегистрироваться</a>
 </p>
 
 <form action="" method="post">
