--- a/view/user/registration.html
+++ b/view/user/registration.html
@@ -10,13 +10,15 @@
 
 {{ content_data.message }}
 
-<form action="index.php?path=user/registration" method="post">
+<form method="post">
   <fieldset>
     <legend>Данные для регистрации</legend>
     <p>Введите свой логин:</p>
-    <p><input type="text" name="login" value="" required/></p>
+    <p><input type="text" name="login" value="{{ app.request.request.post('login') }}" required/></p>
     <p>Введите свой пароль:</p>
     <p><input type="password" name="password" value="" required/></p>
+    <p>Введите повторно свой пароль :</p>
+    <p><input type="password" name="password2" value="" required/></p>
   </fieldset>
   
   <fieldset>
