--- a/view/auth.html
+++ b/view/auth.html
@@ -1,4 +1,10 @@
+{% if session.logged_user %}
+<p>
+  <a href="/index.php?path=user/account">Личный кабинет</a>
+</p>
+{% else %}
 <p>
   <a href="/index.php?path=user/login">Войти / Зарегистрироваться</a>
 </p>
+{% endif %}
 
