--- a/view/user/login.html
+++ b/view/user/login.html
@@ -17,7 +17,7 @@
   <p>Введите свой логин:</p>
   <p><input type="text" name="login" value="" required/></p>
   <p>Введите свой пароль:</p>
-  <p><input type="password" name="pass" value="" required/></p>
+  <p><input type="password" name="password" value="" required/></p>
   <p><input id="auth" type="submit" name="auth" value="Войти"/></p>
 
 </form>
