login and signup modified.

--- a/view/user/login.html
+++ b/view/user/login.html
@@ -12,7 +12,7 @@
   <a href="/index.php?path=user/signup">Зарегистрироваться</a>
 </p>
 
-<form action="" method="post">
+<form action="/index.php?path=user/login" method="post">
   
   <p>Введите свой логин:</p>
   <p><input type="text" name="login" value="" required/></p>
