--- a/view/catalog/product.html
+++ b/view/catalog/product.html
@@ -22,7 +22,7 @@
     <li>Категория: {{ item.category }}</li>
     <li>Статус: {{ item.status }}</li>
   </ul>
-  <button data-id="{{ product_item.id }}">В корзину</button>
+  <button class="js-add-to-cart" data-id="{{ product_item.id }}">В корзину</button>
   
   {% else %}
   <p>No products have been found.</p>
