--- a/view/base.html
+++ b/view/base.html
@@ -6,6 +6,8 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<!--  <script src="/node_modules/jquery/dist/jquery.js"></script>-->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <title>{% block title %}{% endblock %} | {{ sitename }}</title>
 </head>
 
@@ -19,6 +21,8 @@
   
   {% include 'footer.html' %}
 </div>
+
+<script src="/js/main.js"></script>
 </body>
 
 </html>
