--- a/view/cart/index.html
+++ b/view/cart/index.html
@@ -27,10 +27,10 @@
     
     {% for product in content_data.products %}
     
-    <tr data-id="<?= $product['product_id']; ?>">
-      <td><img src="<?= IMAGES_SM_PATH . $product['img']; ?>" class="cart-table__img" alt=""></td>
-      <td><p>{{ product.product_id }}</p></td>
-      <td><p><span class="js-cart-price"><?= $product['price']; ?></span> Р</p></td>
+    <tr data-id="{{ product.id }}">
+      <td><img src="{{ product.img }}" class="cart-table__img" alt="">{{ product.img }}</td>
+      <td><p>{{ product.product_id }} - {{ product.name }}</p></td>
+      <td><p><span class="js-cart-price">{{ product.price }}</span> Р</p></td>
       <td>
         <p>
           <input type="button" class="js-change-quantity change-quantity" value="-">
@@ -38,10 +38,11 @@
           <input type="button" class="js-change-quantity change-quantity" value="+">
         </p>
       </td>
-      <td><p><span class="js-cart-total"><?= $product['total']; ?></span> Р</p></td>
-      <td><p class="cart__delete js-cart-delete" data-name="<?= $product['name'] ?>" title="delete from cart">X</p></td>
+      <td><p><span class="js-cart-total">{{ product.quantity * product.price }}</span> Р</p></td>
+      <td><p class="cart__delete js-cart-delete" data-name="{{ product.name }}" title="delete from cart">X</p></td>
     </tr>
-    {% endfor %}    </tbody>
+    {% endfor %}
+    </tbody>
     
     <tfoot>
     <tr>
