--- a/view/catalog/product.html
+++ b/view/catalog/product.html
@@ -22,7 +22,12 @@
     <li>Категория: {{ item.category }}</li>
     <li>Статус: {{ item.status }}</li>
   </ul>
-  <button class="js-add-to-cart" data-id="{{ item.id }}" data-name="{{ item.name }}">В корзину</button>
+  
+  {% if session.logged_user %}
+  <button class="js-add-to-cart" data-id="{{ product_item.id }}" data-name="{{ product_item.name }}">В корзину</button>
+  {% else %}
+  <a href="/index.php?path=user/login/" class="" name="" >Авторизуйтесь</a>
+  {% endif %}
   
   {% else %}
   <p>No products have been found.</p>
