user_id instead session_id. no cart until login.

--- a/view/auth.html
+++ b/view/auth.html
@@ -1,6 +1,6 @@
 {% if session.logged_user %}
 <p>
-  <a href="/index.php?path=user/account">Личный кабинет</a> | <a href="/index.php?path=user/logout">Выйти</a>
+  <a href="/index.php?path=user/account">Личный кабинет</a> | <a href="#" class="js-user-logout">Выйти</a>
 </p>
 {% else %}
 <p>
