--- a/view/cart/index.html
+++ b/view/cart/index.html
@@ -57,7 +57,7 @@
   
   {% if session.logged_user %}
   <p>
-    <a href="#" class="primary-button primary-button_size_l">
+    <a href="/index.php?path=user/orders" class="primary-button primary-button_size_l">
       <span>Оформить заказ</span>
     </a>
   </p>
