--- a/view/user/account.html
+++ b/view/user/account.html
@@ -12,7 +12,7 @@
 <p>email: {{content_data.user.email}}</p>
 <p>phone: {{content_data.user.phone}}</p>
 
-<a href="/index.php?path=user/logout" >Выйти</a>
+<a href="#" class="js-user-logout">Выйти</a>
 
 {% endblock %}
 
