--- a/view/nav.html
+++ b/view/nav.html
@@ -3,7 +3,9 @@
     <li><a href="/">Главная</a></li>
     <li><a href="/index.php?path=catalog/10">Каталог</a></li>
     <li><a href="/index.php?path=about">О нас</a></li>
+    {% if session.logged_user %}
     <li><a href="/index.php?path=cart">Корзина</a></li>
+    {% endif %}
 <!--    <li><a href="#"></a></li>-->
   </ul>
 </nav>
