--- a/view/cart/index.html
+++ b/view/cart/index.html
@@ -57,7 +57,7 @@
   
   {% if session.logged_user %}
   <p>
-    <a href="/index.php?path=order/{{session.logged_user}}" class="primary-button primary-button_size_l">
+    <a href="/index.php?path=order/confirmOrder/{{ session.logged_user }}" class="primary-button primary-button_size_l">
       <span>Оформить заказ</span>
     </a>
   </p>
