--- a/view/admin/index.html
+++ b/view/admin/index.html
@@ -1,10 +1,18 @@
-{% include 'header.html' %}
-<h1>Control</h1>
-<ul>
-    {% for key,control in content_data.controls %}
-        <li><a href="/admin/control/{{ key }}/">{{ control }}</a></li>
-    {% endfor %}
-</ul>
+{% extends "base.html" %}
 
 
-{% include 'footer.html' %}
+{% block title %}
+{{ title  }}
+{% endblock %}
+
+
+
+{% block content %}
+{% include 'admin/admin_nav.html' %}
+
+{% block admin_content %}
+{% endblock %}
+
+{% endblock %}
+
+
