can't load img in admin

--- a/view/admin/edit.html
+++ b/view/admin/edit.html
@@ -9,7 +9,7 @@
   
   
   <div class="edit__image">
-    <img src="{{ product.img }}" alt="{{ product.img }}">
+    <img src="{{ img_sm_path }}{{ product.img }}" alt="{{ product.img }}">
   </div>
   
   <div class="edit__form">
@@ -19,24 +19,27 @@
       
       <label for="price">Цена товара: </label>
       <input id="price" type="text" name="price" value="{{ product.price }}"><br>
-  
+      
       <label for="category">Категория товара: </label>
       <input id="category" type="text" name="category" value="{{ product.category }}"><br>
       
       <label for="description">Описание товара: </label>
       <textarea id="description" cols="20" rows="5" name="description">{{ product.description }}</textarea><br>
-  
+      
       <label for="status">Цена товара: </label>
       <input id="status" type="text" name="status" value="{{ product.status }}"><br>
-  
-      <label for="img">Картинка товара: </label>
-      <input id="img" type="text" name="img" value="{{ product.img }}"><br>
-  
+      
+<!--      <label for="img">Картинка товара: </label>-->
+<!--      <input id="img" type="text" name="img" value="{{ product.img }}"><br>-->
+      
       <input type="hidden" name="id" value="{{ product.id }}">
-      <!--      <input type="hidden" name="MAX_FILE_SIZE" value="30000"/>-->
-      <!--      <p>Загрузите картинку 500x500px:</p>-->
-      <!--      <input type="file" name="product-image" accept="image/jpeg,image/png,image/gif">-->
-<!--      <input type="hidden" name="product-img-name" value="{{ product.img }}"><br><br>-->
+      <input type="hidden" name="MAX_FILE_SIZE" value="50000"/>
+      <input type="hidden" name="product-img-name" value="{{ product.img }}"><br><br>
+  
+      <label for="file-img">Загрузите картинку 500x500px:</label>
+      <input id="file-img" type="file" name="file-img" accept="image/jpeg,image/png,image/gif"
+             ><br><br>
+      
       <input type="submit" name="save-edited" value="Сохранить">
     </form>
   </div>
