--- a/view/admin/goods.html
+++ b/view/admin/goods.html
@@ -20,7 +20,7 @@
   <tr data-id="{{ product.id }}">
     
     <td>{{ product.id }}</td>
-    <td><img src="{{ product.img }}" class="admin-table__img" alt="{{ product.img }}"></td>
+    <td><img src="{{ img_sm_path }}{{ product.img }}" class="admin-table__img" alt="{{ product.img }}"></td>
     <td>{{ product.name }}</td>
     <td>{{ product.category }}</td>
     <td>{{ product.price }}</td>
