--- a/view/admin/goods.html
+++ b/view/admin/goods.html
@@ -3,6 +3,8 @@
 {% block admin_content %}
 {{ content_data.text }}
 
+{% include 'admin/add_prod_btn.html' %}
+
 
 <table class="admin-table js-admin-goods-table" style='text-align:center;' border='1' width='100%'>
   <tr>
