--- a/view/base.html
+++ b/view/base.html
@@ -22,7 +22,9 @@
   {% include 'footer.html' %}
 </div>
 
-<script src="/js/main.js"></script>
+
+<script src="/js/reg.js"></script>
+<script src="/js/cart.js"></script>
 <script src="/js/admin.js"></script>
 </body>
 
