Added JS class Validator for validation signup form. Removed unnecessary files.

--- a/view/admin/orders.html
+++ b/view/admin/orders.html
@@ -4,6 +4,23 @@
 
 {{ content_data.text }}
 
+<table>
+  <thead>
+  <tr>
+    <th><p>№ Заказа</p></th>
+    <th><p>№ Заказа</p></th>
+    <th><p>Наименование товаров</p></th>
+    <th><p>Цена</p></th>
+    <th><p>Колличество</p></th>
+    <th><p>Стоимость</p></th>
+    <th></th>
+  </tr>
+  </thead>
+  <tr>
+    <td></td>
+  </tr>
+</table>
+
 {% endblock %}
 
 
