--- a/view/user/registration.html
+++ b/view/user/registration.html
@@ -14,7 +14,7 @@
   <fieldset>
     <legend>Данные для регистрации</legend>
     <p>Введите свой логин:</p>
-    <p><input type="text" name="login" value="{{ content_data.login }}" required/></p>
+    <p><input type="text" name="login" value="" required/></p>
     <p>Введите свой пароль:</p>
     <p><input type="password" name="password" value="" required/></p>
     <p>Введите повторно свой пароль :</p>
