--- a/view/base.html
+++ b/view/base.html
@@ -23,6 +23,8 @@
 </div>
 
 
+<script src="/js/classes/Validator.js"></script>
+<script src="/js/signup.js"></script>
 <script src="/js/reg.js"></script>
 <script src="/js/cart.js"></script>
 <script src="/js/admin.js"></script>
